--- a/Resources/UI/qSlicerIGTLConnectorPropertyWidget.ui
+++ b/Resources/UI/qSlicerIGTLConnectorPropertyWidget.ui
@@ -68,6 +68,31 @@
         </item>
        </layout>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="ConnectorStateLabel">
+        <property name="text">
+         <string>Status:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QCheckBox" name="ConnectorStateCheckBox">
+          <property name="text">
+           <string>Active</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="PersistentStateCheckBox">
+          <property name="text">
+           <string>Persistent</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
       <item row="3" column="0">
        <widget class="QLabel" name="ConnectorHostnameLabel">
         <property name="text">
@@ -133,20 +158,6 @@
           </widget>
          </item>
         </layout>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="ConnectorStateLabel">
-        <property name="text">
-         <string>Status:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QCheckBox" name="ConnectorStateCheckBox">
-        <property name="text">
-         <string>Active</string>
-        </property>
        </widget>
       </item>
      </layout>
