--- a/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
+++ b/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
@@ -30,31 +30,24 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Add/Remove Node:</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="qMRMLNodeComboBox" name="NodeSelector" native="true">
+    <widget class="qMRMLNodeComboBox" name="NodeSelector">
      <property name="enabled">
       <bool>true</bool>
      </property>
-     <property name="nodeTypes" stdset="0">
+     <property name="nodeTypes">
       <stringlist>
        <string>vtkMRMLLinearTransformNode</string>
        <string>vtkMRMLScalarVolumeNode</string>
       </stringlist>
      </property>
-     <property name="selectNodeUponCreation" stdset="0">
+     <property name="addEnabled">
+      <bool>false</bool>
+     </property>
+     <property name="removeEnabled">
+      <bool>false</bool>
+     </property>
+     <property name="selectNodeUponCreation">
       <bool>true</bool>
-     </property>
-     <property name="addEnabled" stdset="0">
-      <bool>false</bool>
-     </property>
-     <property name="removeEnabled" stdset="0">
-      <bool>false</bool>
      </property>
     </widget>
    </item>
@@ -66,9 +59,29 @@
     </widget>
    </item>
    <item>
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="QPushButton" name="RemoveNodeButton">
      <property name="text">
       <string>-</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="SendButton">
+     <property name="text">
+      <string>Send</string>
      </property>
     </widget>
    </item>
