ENH: Use MarkupsFiducial node for POINT messages

--- a/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
+++ b/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
@@ -38,6 +38,7 @@
       <stringlist>
        <string>vtkMRMLLinearTransformNode</string>
        <string>vtkMRMLScalarVolumeNode</string>
+       <string>vtkMRMLMarkupsFiducialNode</string>
       </stringlist>
      </property>
      <property name="addEnabled">
