--- a/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
+++ b/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
@@ -40,6 +40,7 @@
        <string>vtkMRMLScalarVolumeNode</string>
        <string>vtkMRMLMarkupsFiducialNode</string>
        <string>vtkMRMLModelNode</string>
+       <string>vtkMRMLTextNode</string>
       </stringlist>
      </property>
      <property name="addEnabled">
